Refactor power-up and frightened ghost logic by introducing `PowerupState` to manage related state and behavior; update `ClientGameController`, `GameState`, `Player`, and `Ghost` accordingly, removing static fields and methods; adjust tests to align with changes.